# wrkflw

./: .dockerignore  .editorconfig  .gitignore  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  DISCLAIMER.md  README.md  build.gradle.kts  docker-compose.local.yml  docker-compose.yml  gradle.properties  gradlew  gradlew.bat  index.html  mise.toml  mkdocs.yml  pyproject.toml  release-please-config.json  settings.gradle.kts  temporal-dynamicconfig
.github/workflows/: ci.yml  publish.yml  release-please.yml
.specify/: extensions.yml  feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
02/8d5dec9568/: metadata.json
03/e74aad131f/: metadata.json
07/ff0e915225/: metadata.json
0b/f0da850e86/: metadata.json
0c/22af1ffe2a/: metadata.json
10/e6688d0cff/: metadata.json
11/8139c56874/: metadata.json
11/8475510152/: metadata.json
14/9d81360b0b/: metadata.json
20/edbf14674a/: metadata.json
20/ff8be80bb7/: metadata.json
adr/: index.html
application/: build.gradle.kts
build-logic/: build.gradle.kts
contracts/: main.tsp  package-lock.json  package.json  tspconfig.yaml
docs/: index.md  requirements.txt
domain/: build.gradle.kts
gradle/: libs.versions.toml
hooks/: commit-msg  pre-commit
scripts/: docker-api-proxy.py  install-hooks.sh
search/: search_index.json
ui/: .env.example  Dockerfile  eslint.config.ts  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
(+1122 files in other folders)
